# windows-notice-lite

./: .gitignore  AUTHORS  BREAKING.md  Cargo.toml  LICENSE  pyproject.toml  readme.md  readme_cn.md
doc/en/About_Event_Notification/: Explanation.md
doc/en/PythonAPI/: Explanation.md
doc/zh-hans/About_Event_Notification/: Explanation.md
doc/zh-hans/PythonAPI/: Explanation.md
src/: lib.rs
src/modules/: mod.rs
src/modules/error/: mod.rs
src/modules/implements/: diff.rs  diff_tool.rs  differ.rs  listener.rs  mod.rs  mutable_toast.rs  toast.rs
src/modules/implements/events/features/: callback_token.rs  polling_eventify.rs
src/modules/types/: diff.rs  differ.rs  mutable_toast.rs  toast.rs
src/modules/types/events/features/: callback_token.rs  events_type.rs  polling_eventify.rs  polling_status.rs
src/modules/utils/: mod.rs  notification_tools.rs
win_notice_lite/: __init__.py
