[package]
name = "win-notice-lite"
authors = ["星灿长风v(StarWindv)"]
version = "0.0.2"
edition = "2024"
license = "GPL-3"
homepage = "https://github.com/starwindv/windows-notice-lite.git"

[dependencies]
pyo3 = { version = "0.28.2", features = ["experimental-async"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
windows = { version = "0.62.2", features = [
    "UI_Notifications",
    "UI_Notifications_Management",
    "ApplicationModel"
] }
windows-collections = "0.3.2"
windows-future = "0.3.2"

[lib]
name = "win_notice_lite"
path = "src/lib.rs"
crate-type = ["cdylib"]
