[package]
name = "win-notice-lite"
authors = ["星灿长风v(StarWindv)"]
version = "0.1.3"
edition = "2024"
license = "GPL-3"
homepage = "https://github.com/starwindv/windows-notice-lite.git"
description = "This project is used to encapsulate Windows-related interfaces and expose a set of processed methods for Python usage."

[dependencies]
pyo3 = { version = "0.28.2", features = ["experimental-async", "experimental-inspect"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "time"] }
windows = { version = "0.62.2", features = [
    "UI_Notifications",
    "UI_Notifications_Management",
    "ApplicationModel"
] }
windows-collections = "0.3.2"
windows-future = "0.3.2"

[lib]
name = "win_notice_lite"
path = "src/lib.rs"
crate-type = ["cdylib"]
